Fix alignment of elements in sub row boxes

--- a/style.css
+++ b/style.css
@@ -251,7 +251,7 @@ hr {
     box-sizing: border-box;
     border-radius: 5px;
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 3fr 1.5fr;
     grid-template-rows: 1fr 1fr;
 }
 
@@ -270,11 +270,8 @@ hr {
     margin: 0;
     padding: 1rem 0 0 0;
     display: flex;
+    justify-content: center;
     align-items: center;
-}
-
-.wrapper .social-icon {
-    padding: 0 0 0 1rem;
 }
 
 .sub-row .box .stats {
@@ -292,6 +289,7 @@ hr {
     /* background-color: silver; */
     margin: 0;
     display: flex;
+    justify-content: center;
     align-items: center;
     padding: 0 0 1rem 0;
 }
